# SentinAirSensor

./: sdkconfig  sdkconfig.old
main/: CMakeLists.txt  Kconfig.projbuild  bmx280.h  json_parser.c  json_parser.h  main.c  mount.c  mount.h  nvs_data.c  nvs_data.h  root.html  sensors.c  sensors.h  server_stack.c  server_stack.h  sleep.c  sleep.h  upload_script.html  wifi_stack.c  wifi_stack.h
